--- a/index.html
+++ b/index.html
@@ -490,6 +490,7 @@
       <li id="horn-2013">Horn, M.S. (2013). The role of cultural forms in tangible interaction design. In <i>Proc. Tangible, Embedded, and Embodied Interaction</i> (TEI'13).</li>
       <li id="topcodes">Horn, M. TopCode: Tangible Object Placement Codes. http://users.eecs.northwestern.edu/~mhorn/topcodes/</li>
       <li id="horn-2012">Horn, M.S., Crouser, R.J., &amp; Bers, M.U. (2012). Tangible interaction and learning: The case for a hybrid approach. <i>Pers. and Ubiq. Computing, 16</i>(4), 379-389.</li>
+      <li id="kibo-2015">Sullivan, A., Elkin, M., Bers, M. U. (2015). KIBO robot demo: engaging young children in programming and engineering. In Proceedings of the 14th International Conference on Interaction Design and Children. 418-421.</li>
       <li id="roberto13">Horn, M.S., AlSulaiman, S., Koh, J. (2013). Translating Roberto to Omar: Computational literacy, stickerbooks, and cultural forms. In <i>Proc. IDC'13</i>, 120-127.</li>
       <li id="hour-of-code">Hour of Code. https://www.code.org/learn</li>
       <!-- <li id="horn-2014">Horn, M.S., Weintrop, D., and Routman, E. (2014). Programming in the Pond: A Tabletop Computer Programming Exhibit. In <i>Proc. ACM Human Factors in Computing Systems (CHI'14 extended abstracts).</i></li> -->
