added references for stevens and nasir

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <b>Fun and Inviting:</b> We sought to create a game that was entertaining, attractive, and not intimidating. We hoped that the tangible objects would attract kids’ attention from a distance and draw them into an engaging experience.
       </p>
       <p>
-        <b>Collaborative:</b> Research in the learning sciences suggests that kids spontaneously form diverse and effective patterns of collaboration in game play [Stevens, Nasir]. Our observations of children playing Strawbies corroborated these findings with siblings, classmates, and friends engaging in a surprising variety of joint activity. It was important, therefore, that our game create space for diverse collaborative arrangements with two, three, and even four or more.
+        <b>Collaborative:</b> Research in the learning sciences suggests that kids spontaneously form diverse and effective patterns of collaboration in game play [<cite ref="nasir-2005"></cite>, <cite ref="stevens-2008"></cite>]. Our observations of children playing Strawbies corroborated these findings with siblings, classmates, and friends engaging in a surprising variety of joint activity. It was important, therefore, that our game create space for diverse collaborative arrangements with two, three, and even four or more.
       </p>
       <p>
         <b>Responsive:</b> It was important for the game to support fluid and real-time interaction. As much as possible we wanted the game to “responds immediately, clearly and predictably to users’ actions.” [<cite ref="snibbe-2009"></cite>]
@@ -488,8 +488,10 @@
       <li id="drwagon13">Chawla, K., Chiou, M., Sandes, A., &amp; Blikstein, P. (2013). Dr. Wagon: a 'stretchable' toolkit for tangible computer programming. In <i>Proc. Interaction Design and Children</i> (IDC'13), 561-564.</li>
       <li id="disessa-2000">diSessa, A. (2000). <i>Changing Minds: Computers, Learning, and Literacty.</i> MIT Press.</li>
       <li id="scratchjr13">Flannery, L.P., Silverman, B., Kazakoff, E.R., Bers, M.U., Bontá, P., &amp; Resnick, M. (2013). Designing ScratchJr: Support for early childhood learning through computer programming. In <i>Proc. Interaction Design and Children</i> (IDC'13), 1-10.</li>
+      <li id="flanagan-2009">Flanagan, M. Critical play: radical game design. MIT press, 2009.</li>
+      <li id="habgood-2011">Habgood, M.P.J., Ainsworth, S.E. Motivating children to learn effectively: Exploring the value of intrinsic integration in educational games. The Journal of the Learning Sciences 20.2 (2011): 169-206.</li>
       <li id="horn-2013">Horn, M.S. (2013). The role of cultural forms in tangible interaction design. In <i>Proc. Tangible, Embedded, and Embodied Interaction</i> (TEI'13).</li>
-      <li id="schweikardt-2008">Schweikardt, E., Gross, M. D. (2008). The robot is the program: interacting with roBlocks. In Proceedings of the 2nd international conference on Tangible and embedded interaction. 167-168.</li>
+      <li id="schweikardt-2008">Schweikardt, E., Gross, M. D. (2008). The robot is the program: interacting with roBlocks. In TEI'08. 167-168.</li>
       <li id="topcodes">Horn, M. TopCode: Tangible Object Placement Codes. http://users.eecs.northwestern.edu/~mhorn/topcodes/</li>
       <li id="horn-2012">Horn, M.S., Crouser, R.J., &amp; Bers, M.U. (2012). Tangible interaction and learning: The case for a hybrid approach. <i>Pers. and Ubiq. Computing, 16</i>(4), 379-389.</li>
       <li id="kibo-2015">Sullivan, A., Elkin, M., Bers, M. U. (2015). KIBO robot demo: engaging young children in programming and engineering. In Proceedings of the 14th International Conference on Interaction Design and Children. 418-421.</li>
@@ -497,20 +499,21 @@
       <li id="hour-of-code">Hour of Code. https://www.code.org/learn</li>
       <!-- <li id="horn-2014">Horn, M.S., Weintrop, D., and Routman, E. (2014). Programming in the Pond: A Tabletop Computer Programming Exhibit. In <i>Proc. ACM Human Factors in Computing Systems (CHI'14 extended abstracts).</i></li> -->
       <!-- <li id="kazakoff-2014">Kazakoff, E.R. &amp; Bers, M.U. (2014). Put your robot in, Put your robot out: Sequencing through programming robots in early childhood.  <i>Journal of Educational Computing Research, 50</i>(4).</li>  -->      
-      <li id="norman-2012">Norman, Donald A. The design of everyday things: Revised and expanded edition. Basic books, 2013.</li>
-      <li id="snibbe-2009">Snibbe, S. S., Raffle, H. S. (2009). Social immersive media: pursuing best practices for multi-user interactive camera/projector exhibits. In Proceedings of the SIGCHI Conference on Human Factors in Computing Systems, 1447-1456.</li>
       <li id="mcnerney-2004">McNerney, T. (2004). From turtles to tangible programming bricks: explorations in physical language design. <i>Pers. and Ubiq. Computing, 8</i>(5), 326-337.</li>
       <li id="montemayor-2004">Montemayor, J., Druin, A., Chipman, G., Farber, A., &amp; Guha, M.L. (2004). Tools for children to create physical interactive StoryRooms. <i>Computers in Entertainment: Educating children through entertainment Part II, 2</i>(1). </li>
+      <li id="nasir-2005">Nasir, N. I. S. (2005). Individual cognitive structuring and the sociocultural context: Strategy shifts in the game of dominoes. The Journal of the Learning Sciences, 14(1), 5-34.</li>
+      <li id="norman-2012">Norman, D.A. The design of everyday things: Revised and expanded edition. Basic books, 2013.</li>
       <li id="oh-2013">Oh, H., Deshmane, A., Li, F., Han, J. Y., Stewart, M., Tsai, M., &amp; Oakley, I. (2013). The digital dream lab: tabletop puzzle blocks for exploring programmatic concepts. In <i>Proc. Tangible, Embedded and Embodied Interaction</i> (TEI'13)</li>
       <li id="osmo">Osmo. https://www.playosmo.com</li>
       <li id="papert-1980">Papert, S. (1980). <i>Mindstorms: Children, Computers, and Powerful Ideas.</i> New York: Basic Books. </li>
       <!-- <li id="nrc-2011">National Research Council. (2011). <i>Report of a Workshop of Pedagogical Aspects of Computational Thinking.</i> Washington, D.C.: The National Academies Press.</li> -->
       <li id="resnick-2009">Resnick, M., Maloney, J., Monroy-Hernández, A., Rusk, N., Eastmond, E., Brennan, K., Millner, A., Rosenbaum, E., Silver, J., Sliverman, B. &amp; Kafai, Y. (2009). Scratch: programming for all. <i>Communications of the ACM, 52</i>(11), 60-67.</li>
-      <li id="habgood-2011">Habgood, MP Jacob, Shaaron E. Ainsworth. Motivating children to learn effectively: Exploring the value of intrinsic integration in educational games. The Journal of the Learning Sciences 20.2 (2011): 169-206.</li>
-      <li id="flanagan-2009">Flanagan, Mary. Critical play: radical game design. MIT press, 2009.</li>
-      <li id="roblocks08">Schweikardt, E., &amp; Gross, M.D. (2008). The robot is the program: interacting with roBlocks. In <i>Proc. Tangible and Embedded Interaction</i> (TEI'08), 167-168.</li>
       <li id="sapounidis-2013">Sapounidis, T., &amp; Demetriadis, S. (2013). Tangible versus graphical user interfaces for robot programming: exploring cross-age children’s preferences. <i>Personal and ubiquitous computing, 17</i>(8), 1775-1786.</li>
+      <li id="roblocks08">Schweikardt, E., &amp; Gross, M.D. (2008). The robot is the program: interacting with roBlocks. In <i>Proc. Tangible and Embedded Interaction</i> (TEI'08), 167-168.</li>
+
       <li id="sipitakiat-2012">Sipitakiat, A., &amp; Nusen, N. (2012). Robo-Blocks: designing debugging abilities in a tangible programming system for early primary school children. In <i>Proc. Interaction Design and Children</i> (IDC'12), 98-105.</li>
+      <li id="snibbe-2009">Snibbe, S. S., Raffle, H. S. (2009). Social immersive media: pursuing best practices for multi-user interactive camera/projector exhibits. In Proceedings of the SIGCHI Conference on Human Factors in Computing Systems, 1447-1456.</li>
+      <li id="stevens-2008">Stevens, R., Satwicz, T., &amp; McCarthy, L. (2008). In-game, in-room, in-world: Reconnecting video game play to the rest of kids’ lives. The ecology of games: Connecting youth, games, and learning, 9, 41-66.</li>
       <li id="weintrop-2013">Weintrop, D., &amp; Wilensky, U. (2013). RoboBuilder: A Computational Thinking Game. In <i>Proc. ACM Technical Symposium on Computer Science Education</i>, 736-736.</li>
       <li id="wyeth-2008">Wyeth, P. (2008). How young children learn to program with sensor, action, and logic blocks. <i>Journal of the Learning Sciences, 17</i>(4), 517-550.</li> 
       </ol>
