edited captions. slight changes to the conclusion

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <figure id="figure1">
           <img src="figures/figure1.png" style="width: 3.33in; height: 2.5in" alt="">
           <figcaption>
-            Figure 1. Strawbies programming environment using tangible tiles, an iPad, and the Osmo attachment.          
+            Figure 1. Strawbies app with tangible tiles, iPad, and Osmo game system (from playosmo.com).          
             <!--
             Figure 1. Child playing with Strawbies using tangible tiles, an iPad, and the Osmo attachment.
             -->
@@ -183,7 +183,7 @@
         <figure id="figure6">
           <img src="figures/figure6.png" style="width: 3.33in; height: 4.0in" alt="">
           <figcaption>
-            Figure 6. Different iterations of our game.
+            Figure 6. Different iterations with a puzzle-like environment (top left), a first pass at the open world environment (top right), preliminary real-time feedback (bottom left), and the current iteration (bottom right).
           </figcaption>
         </figure>
 
@@ -466,7 +466,7 @@
       
       <h1>Conclusion</h1>
       <p>
-        We were able to create an inexpensive, portable, and fluid tangible programming environment by using the Osmo play system. Portability allowed for players to play Strawbies in a range of spaces. Inexpensive and passive tangibles allowed us to rapidly prototype and iteratively design our game. Fluidity allowed for a truly engaging experience that kept our players playing.
+        We were able to create an inexpensive, portable, and fluid tangible programming environment building on the Osmo game system. Portability means that Strawbies can be played in a range of spaces, not tied to a camera fixture or interactive tabletop. Inexpensive and passive tangibles facilitate mass-production or print-and-play distribution scenarios for a broader audience. Fluidity helps create a more engaging experience that kept our players playing.
       </p>
       <p>
         Through our long and iterative design process, we learned lessons that we believe are important for similar programming environments that combine real-time computer vision with inexpensive tangible compontents. Games should be designed using existing tablet interactions. Unlike a custom exhibit in a museum, iPads afford certain interactions that users will expect.
